# data-quality-analyzer

backend/: pyproject.toml  setup.py
backend/backend/: main.py
frontend/dq-ui/: package-lock.json  package.json
frontend/dq-ui/src/app/: layout.jsx
frontend/dq-ui/src/components/: Navbar.jsx  PracticeNavbar.jsx
